--- a/style.css
+++ b/style.css
@@ -41,8 +41,11 @@ body {
 
 .area-input{
     position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
     padding: 10px;
     width: 100%;
+    max-width: 780px;
 
     display: flex;
     align-items: flex-start;
@@ -109,8 +112,10 @@ body {
     transition: .3s ease;
     position: relative;
     left: 2000px;
+
     width: 100%;
     max-width: 600px;
+    height: 100vh;
 
     display: flex;
     flex-direction: column;
@@ -154,7 +159,7 @@ body {
 /* Círculo de fundo */
 .circle-bg {
   position: absolute;
-  top: 40px;
+  top: 210px;
   left: 50%;
   width: 350px;
   height: 350px;
@@ -186,8 +191,15 @@ body {
     color: #fff;
 }
 
+/* No visibility */
+.button-code{
+    visibility: hidden;
+}
+
 @media screen and (max-width: 520px) {
     .buttons{
         flex-direction: column;
     }
 }
+
+/* No */
